[package]

name = "pupurium_r"
version = "0.1.0"
authors = [ "evshiron", "doylecnn", "myg133" ]
links = "CQP"
build = "build.rs"

[dependencies]
encoding = "*"

[dependencies.cqpsdk]
git = "https://github.com/myg133/cqpsdk-rust"
# path = "../cqpsdk-rust"

[lib]

name = "pupurium_r"
crate-type = [ "dylib" ]

