[package]

name = "pupurium_test"
version = "0.1.0"
authors = [ "evshiron", "doylecnn", "myg133" ]
links = "CQP"
build = "build.rs"

[dependencies]
encoding = "*"

[dependencies.cqpsdk]
git = "https://github.com/myg133/cqpsdk-rust"
# path = "../cqpsdk-rust"

[lib]

name = "app"
crate-type = [ "dylib" ]

